--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -25,6 +25,26 @@ env:
   GIT_VERSION: 1
 
 jobs:
+  win-x64:
+    runs-on: ubuntu-latest
+    env:
+      TARGET: x86_64-w64-mingw32
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Populate environment
+      run: ./make.sh ci-export-vars
+
+    - name: Build and package
+      run: ./make.sh docker-release
+
+    - name: Publish artifact - x86_64-w64-mingw32
+      uses: actions/upload-artifact@v3
+      with:
+        name: defichain-${{ env.BUILD_VERSION }}-x86_64-w64-mingw32
+        path: ./build/defichain-${{ env.BUILD_VERSION }}-x86_64-w64-mingw32.tar.gz  
+
   build:
     runs-on: ubuntu-latest
     container: defi/ain-builder:latest
