--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -25,33 +25,12 @@ env:
   GIT_VERSION: 1
 
 jobs:
-  win-x64:
-    runs-on: ubuntu-latest
-    env:
-      TARGET: x86_64-w64-mingw32
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Populate environment
-      run: ./make.sh ci-export-vars
-
-    - name: Build and package
-      run: ./make.sh docker-release
-
-    - name: Publish artifact - x86_64-w64-mingw32
-      uses: actions/upload-artifact@v3
-      with:
-        name: defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}
-        path: ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }}
-
   build:
     runs-on: ubuntu-latest
     container: defi/ain-builder:latest
     strategy:
       matrix:
-        # target: [x86_64-pc-linux-gnu, x86_64-w64-mingw32, x86_64-apple-darwin]
-        target: [x86_64-pc-linux-gnu, x86_64-apple-darwin]
+        target: [x86_64-pc-linux-gnu, x86_64-w64-mingw32, x86_64-apple-darwin]
     env:
       TARGET: ${{matrix.target}}
 
