--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   create-release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     container: defi/ain-builder:latest
     if: startsWith(github.ref, 'refs/tags/')
     strategy:
