--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -41,6 +41,8 @@ jobs:
     - name: Populate environment
       run: ./make.sh ci-export-vars
 
+    - run: echo "/root/.cargo/bin" >> $GITHUB_PATH
+
     - name: Setup dependencies
       run: ./make.sh ci-setup-deps
 
