--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -57,13 +57,13 @@ jobs:
           ~/.ccache
         key: cpp-${{ env.TARGET }}-${{ env.BUILD_TYPE }}
 
-    # - name: Rust build cache
-    #   uses: Swatinem/rust-cache@v2
-    #   id: rust-cache-restore
-    #   with:
-    #     workspaces: lib -> ../build/lib/target
-    #     save-if: ${{ github.ref == 'refs/heads/master' }}
-    #     shared-key: ${{ env.TARGET }}
+    - name: Rust build cache
+      uses: Swatinem/rust-cache@v2
+      id: rust-cache-restore
+      with:
+        workspaces: lib -> ../build/lib/target
+        save-if: ${{ github.ref == 'refs/heads/master' }}
+        shared-key: ${{ env.TARGET }}
 
     - name: Build and package
       run: ./make.sh release
