--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -29,7 +29,7 @@ jobs:
     runs-on: [self-hosted, linux, x64, builder]
     strategy:
       matrix:
-        target: [x86_64-pc-linux-gnu, x86_64-w64-mingw32, x86_64-apple-darwin]
+        target: [x86_64-w64-mingw32]
     env:
       TARGET: ${{matrix.target}}
 
