Revert "Run on self-hosted"
This reverts commit 63c7f1945f810fa0fca2452c138a1f4591e9247d.

--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -26,7 +26,8 @@ env:
 
 jobs:
   build:
-    runs-on: [self-hosted, linux, x64, builder]
+    runs-on: ubuntu-latest
+    container: defi/ain-builder:latest
     strategy:
       matrix:
         target: [x86_64-w64-mingw32]
