--- a/.github/workflows/tests-ocean.yml
+++ b/.github/workflows/tests-ocean.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
     branches:
-      - master
+      - feature/ocean-archive
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
