--- a/lib/ain-evm/Cargo.toml
+++ b/lib/ain-evm/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 ain-cpp-imports.workspace = true
+ain-db.workspace = true
 ain-contracts = { path = "../ain-contracts" }
 
 evm = { workspace = true, default-features = false, features = ["with-serde", "tracing", "std"] }
