--- a/.github/workflows/tests-ocean.yml
+++ b/.github/workflows/tests-ocean.yml
@@ -4,7 +4,8 @@ on:
   workflow_dispatch:
   pull_request:
     branches:
-      - feature/ocean-archive
+      - master
+      - feature/ocean-archive # TODO(): remove before merge to master
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
