With RepositoryOps trait

--- a/lib/ain-db/Cargo.toml
+++ b/lib/ain-db/Cargo.toml
@@ -10,3 +10,4 @@ serde.workspace = true
 bincode.workspace = true
 rocksdb.workspace = true
 ain-cpp-imports.workspace = true
+anyhow.workspace = true
