--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -125,3 +125,4 @@ cached = "0.46"
 ### Local crates
 ain-cpp-imports = { path = "./ain-cpp-imports" }
 ain-db = { path = "./ain-db" }
+ain-macros = { path = "./ain-macros" }
