Save rust cache

--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -47,23 +47,23 @@ jobs:
     - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
 
-    # - name: Restore cpp build cache
-    #   id: cpp-cache-restore
-    #   uses: actions/cache/restore@v3
-    #   with:
-    #     path: |
-    #       ./build/depends
-    #       ./build/src
-    #       ~/.ccache
-    #     key: cpp-${{ env.TARGET }}-${{ env.BUILD_TYPE }}
+    - name: Restore cpp build cache
+      id: cpp-cache-restore
+      uses: actions/cache/restore@v3
+      with:
+        path: |
+          ./build/depends
+          ./build/src
+          ~/.ccache
+        key: cpp-${{ env.TARGET }}-${{ env.BUILD_TYPE }}
 
-    # - name: Rust build cache
-    #   uses: Swatinem/rust-cache@v2
-    #   id: rust-cache-restore
-    #   with:
-    #     workspaces: lib -> ../build/lib/target
-    #     save-if: ${{ github.ref == 'refs/heads/master' }}
-    #     shared-key: ${{ env.TARGET }}
+    - name: Rust build cache
+      uses: Swatinem/rust-cache@v2
+      id: rust-cache-restore
+      with:
+        workspaces: lib -> ../build/lib/target
+        # save-if: ${{ github.ref == 'refs/heads/master' }}
+        shared-key: ${{ env.TARGET }}
 
     - name: Build and package
       run: ./make.sh release
@@ -75,7 +75,7 @@ jobs:
         path: ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }}
 
     - name: Delete previous cpp build cache
-      # if: ${{ github.ref == 'refs/heads/master' && steps.cpp-cache-restore.outputs.cache-hit }}
+      if: ${{ github.ref == 'refs/heads/master' && steps.cpp-cache-restore.outputs.cache-hit }}
       continue-on-error: true
       run: |
         gh extension install actions/gh-actions-cache
@@ -84,7 +84,7 @@ jobs:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Save cpp build cache
-      # if: ${{ github.ref == 'refs/heads/master' }}
+      if: ${{ github.ref == 'refs/heads/master' }}
       uses: actions/cache/save@v3
       with:
         path: |
