--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -124,3 +124,5 @@ cached = "0.46"
 
 ### Local crates
 ain-cpp-imports = { path = "./ain-cpp-imports" }
+ain-db = { path = "./ain-db" }
+ain-macros = { path = "./ain-macros" }
