--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -20,7 +20,7 @@ serde.workspace = true
 thiserror.workspace = true
 hex.workspace = true
 dftx-rs.workspace = true
-bitcoin.workspace = true
+bitcoin = { workspace = true, features = ["serde"] }
 tarpc = { version = "0.33", features = ["tokio1", "serde1", "serde-transport","tcp"] }
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0"
