--- a/.github/workflows/tests-ocean.yml
+++ b/.github/workflows/tests-ocean.yml
@@ -84,7 +84,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: birthdayresearch/jellyfishsdk
-          ref: 'main'
+          # ref: 'main'
+          ref: 'canonbrother/defid-ocean'
 
       - name: Download binaries
         uses: actions/download-artifact@v3
