Add ain-win-builder into gh strategy

--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -27,10 +27,16 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: defi/ain-builder:latest
     strategy:
       matrix:
         target: [x86_64-pc-linux-gnu, x86_64-w64-mingw32, x86_64-apple-darwin]
+        include:
+        - target: x86_64-pc-linux-gnu
+          container: defi/ain-builder:latest
+        - target: x86_64-w64-mingw32
+          container: defi/ain-win-builder:latest
+        - target: x86_64-apple-darwin
+          container: defi/ain-builder:latest
     env:
       TARGET: ${{matrix.target}}
 
