--- a/.github/workflows/tests-ocean.yml
+++ b/.github/workflows/tests-ocean.yml
@@ -23,6 +23,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: 'canonbrother/ocean-ci-testing'
     - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
@@ -51,13 +53,15 @@ jobs:
   docker-build:
     runs-on: ubuntu-latest
     needs: [build]
-    
+
     steps:
       - uses: actions/checkout@v4
-      
+        with:
+          ref: 'canonbrother/ocean-ci-testing'
+
       - name: Populate environment
         run: ./make.sh ci-export-vars
-      
+
       - name: Download binaries
         uses: actions/download-artifact@v3
         with:
@@ -72,7 +76,7 @@ jobs:
         with:
           name: defi-docker
           path: .
-          
+
   test:
     name: Jellyfish Whale Api tests
     runs-on: ubuntu-latest
