--- a/.github/workflows/tests-ocean.yml
+++ b/.github/workflows/tests-ocean.yml
@@ -50,37 +50,10 @@ jobs:
         name: defi-bins
         path: build/src/defid
 
-  docker-build:
-    runs-on: ubuntu-latest
-    needs: [build]
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: 'canonbrother/ocean-ci-testing'
-
-      - name: Populate environment
-        run: ./make.sh ci-export-vars
-
-      - name: Download binaries
-        uses: actions/download-artifact@v3
-        with:
-          name: defi-bins
-          path: ./build/
-
-      - name: Build docker
-        run: "docker build -t test-build-container -f ./contrib/dockerfiles/x86_64-pc-linux-gnu.dockerfile ."
-
-      - name: Upload docker
-        uses: actions/upload-artifact@v3
-        with:
-          name: defi-docker
-          path: .
-
   test:
     name: Jellyfish Whale Api tests
     runs-on: ubuntu-latest
-    needs: [build, docker-build]
+    needs: [build]
     strategy:
       fail-fast: false
 
@@ -96,11 +69,6 @@ jobs:
         with:
           name: defi-bins
 
-      - name: Download docker
-        uses: actions/download-artifact@v3
-        with:
-          name: defi-docker
-
       - name: Setup permissions
         run: |
           chmod uog+x "$(pwd)/defid"
@@ -109,10 +77,18 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install dependencies
-        run: |
-          npm ci
+      - uses: actions/checkout@v4
+        with:
+          path: defichain
+          ref: 'canonbrother/ocean-ci-testing'
+
+      - name: Populate environment
+        run: cd defichain && ./make.sh ci-export-vars
+
+      - name: Build docker
+        run: "cd defichain && docker build -t test-build-container -f ./contrib/dockerfiles/x86_64-pc-linux-gnu.dockerfile ."
 
       - name: Run tests
         run: |
+          npm ci
           DEFICHAIN_DOCKER_IMAGE=test-build-container DEFID="$(pwd)/defid" npm t apps/whale-api/src/module.api/masternode.controller.e2e.ts
