--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -14,11 +14,16 @@ env:
 jobs:
   create-release:
     runs-on: ubuntu-latest
-    container: defi/ain-builder:latest
     if: startsWith(github.ref, 'refs/tags/')
     strategy:
       matrix:
         target: [x86_64-pc-linux-gnu, aarch64-linux-gnu, x86_64-w64-mingw32, x86_64-apple-darwin, aarch64-apple-darwin]
+        include:
+        - container: defi/ain-builder:latest
+        - target: x86_64-w64-mingw32
+          container: defi/ain-win-builder:latest
+    container:
+      image: ${{ matrix.container }}
     env:
       TARGET: ${{matrix.target}}
 
