Re-enable frontier test on push to master

--- a/.github/workflows/tests-frontier.yml
+++ b/.github/workflows/tests-frontier.yml
@@ -2,6 +2,9 @@ name: Tests - DeFiCh/metachain-ts-suite
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - master
   pull_request:
     branches:
       - master
