Display RAM and swap before e2e tests

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -73,6 +73,9 @@ jobs:
     # Temp. workaround to save space to prevent GH runners from running out
     - name: Cleanup cargo deps
       run: rm -rf build/lib/target/debug/deps
+
+    - name: Display RAM and swap
+      run: free -h
       
     - name: E2E tests
       run: ./make.sh test
