--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -287,6 +287,7 @@ DEFI_CORE_H = \
   util/translation.h \
   util/url.h \
   util/validation.h \
+  util/vector.h \
   validation.h \
   validationinterface.h \
   versionbits.h \
