--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -78,6 +78,7 @@ jobs:
       run: |
         rm -rf build/lib/target/debug/deps
         rm -rf build/depends
+        rm -rf build/lib
 
     - name: Functional tests
       run: ./make.sh test-py
