--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -39,5 +39,5 @@ chrono = "0.4.31"
 cached.workspace = true
 lazy_static.workspace = true
 bincode.workspace = true
-bitcoincore-rpc = "0.18.0"
+defichain-rpc = { version = "0.18.0", git = "https://github.com/Jouzo/rust-defichain-rpc.git" }
 jsonrpc = "0.14.1"
