--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -27,7 +27,7 @@ serde_json = "1.0"
 json = "0.12.4"
 tokio-serde = {version="0.8.0"}
 futures = "0.3.29"
-jsonrpsee =  { version = "0.20.3", features = ["server", "macros", "http-client", "jsonrpsee-server"] }
+jsonrpsee = { workspace = true, features = ["server", "macros", "http-client", "jsonrpsee-server"] }
 rocksdb = "0.21.0"
 ctrlc = "3.1.9"
 tempdir = "0.3.7"
@@ -39,3 +39,5 @@ chrono = "0.4.31"
 cached.workspace = true
 lazy_static.workspace = true
 bincode.workspace = true
+defichain-rpc = { version = "0.18.0", git = "https://github.com/Jouzo/rust-defichain-rpc.git" }
+jsonrpc = "0.14.1"
