--- a/.github/workflows/tests-ocean.yml
+++ b/.github/workflows/tests-ocean.yml
@@ -23,6 +23,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: 'canonbrother/ocean-ci-testing'
     - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
@@ -48,35 +50,10 @@ jobs:
         name: defi-bins
         path: build/src/defid
 
-  docker-build:
-    runs-on: ubuntu-latest
-    needs: [build]
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Populate environment
-        run: ./make.sh ci-export-vars
-      
-      - name: Download binaries
-        uses: actions/download-artifact@v3
-        with:
-          name: defi-bins
-          path: ./build/
-
-      - name: Build docker
-        run: "docker build -t test-build-container -f ./contrib/dockerfiles/x86_64-pc-linux-gnu.dockerfile ."
-
-      - name: Upload docker
-        uses: actions/upload-artifact@v3
-        with:
-          name: defi-docker
-          path: .
-          
   test:
     name: Jellyfish Whale Api tests
     runs-on: ubuntu-latest
-    needs: [build, docker-build]
+    needs: [build]
     strategy:
       fail-fast: false
 
@@ -84,17 +61,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: birthdayresearch/jellyfishsdk
-          ref: 'main'
+          # ref: 'main'
+          ref: 'canonbrother/whale-defid' # TODO(): remove before merge to master
 
       - name: Download binaries
         uses: actions/download-artifact@v3
         with:
           name: defi-bins
-
-      - name: Download docker
-        uses: actions/download-artifact@v3
-        with:
-          name: defi-docker
 
       - name: Setup permissions
         run: |
@@ -104,10 +77,15 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install dependencies
-        run: |
-          npm ci
+      - uses: actions/checkout@v4
+        with:
+          path: defichain
+          ref: 'canonbrother/ocean-ci-testing'
+
+      - name: Populate environment
+        run: cd defichain && ./make.sh ci-export-vars
 
       - name: Run tests
         run: |
-          DEFICHAIN_DOCKER_IMAGE=test-build-container DEFID="$(pwd)/defid" npm t apps/whale-api/src/module.api
+          npm ci
+          DEFID="$(pwd)/defid" npm run defid apps/whale-api/src/module.api/__defid__
