--- a/lib/ain-rs-exports/Cargo.toml
+++ b/lib/ain-rs-exports/Cargo.toml
@@ -25,6 +25,7 @@ hex.workspace = true
 serde_json.workspace = true
 anyhow.workspace = true
 ethabi.workspace = true
+defichain-rpc.workspace = true
 
 # Build
 cxx.workspace = true
