--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -63,6 +63,7 @@ sha3 = "0.10"
 
 num = { version = "0.4", default-features = false, features = ["alloc"] }
 num-traits = "0.2"
+num_cpus = "1.0"
 
 hex = "0.4"
 hex-literal = "0.4"
@@ -121,6 +122,7 @@ substrate-bn = "0.6"
 dftx-rs = { git = "https://github.com/Jouzo/dftx-rs.git" }
 bitcoin = "0.31"
 cached = "0.46"
+defichain-rpc = { version = "0.18.0", git = "https://github.com/Jouzo/rust-defichain-rpc.git" }
 
 ### Local crates
 ain-cpp-imports = { path = "./ain-cpp-imports" }
