--- a/lib/ain-db/Cargo.toml
+++ b/lib/ain-db/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 serde.workspace = true
 bincode.workspace = true
 rocksdb.workspace = true
-ain-cpp-imports.workspace = true
 anyhow.workspace = true
+num_cpus.workspace = true
+
