--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -41,5 +41,5 @@ cached.workspace = true
 lazy_static.workspace = true
 bincode.workspace = true
 defichain-rpc.workspace = true
-jsonrpc = "0.14.1"
-serde_urlencoded = { version = "0.7" }
+jsonrpc-async = "2.0.2"
+serde_urlencoded = "0.7"
