Stats API initial impl

--- a/lib/ain-grpc/Cargo.toml
+++ b/lib/ain-grpc/Cargo.toml
@@ -37,6 +37,7 @@ tower.workspace = true
 hyper.workspace = true
 rand.workspace = true
 axum.workspace = true
+defichain-rpc.workspace = true
 
 [build-dependencies]
 heck.workspace = true
