--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -121,7 +121,7 @@ substrate-bn = "0.6"
 #### Ocean dependencies
 dftx-rs = { git = "https://github.com/Jouzo/dftx-rs.git" }
 bitcoin = "0.31"
-cached = "0.46"
+cached = { version = "0.48", features = ["async"] }
 defichain-rpc = { version = "0.18.0", git = "https://github.com/Jouzo/rust-defichain-rpc.git" }
 
 ### Local crates
