--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -39,5 +39,5 @@ bincode.workspace = true
 defichain-rpc.workspace = true
 jsonrpc-async = "2.0.2"
 serde_urlencoded = "0.7"
-rust_decimal = { version = "1.34", features = ["serde", "serde-str"] }
+rust_decimal = { version = "1.34", features = ["serde", "serde-float", "serde-with-str"] }
 rust_decimal_macros = "1.34"
