--- a/lib/ain-rs-exports/Cargo.toml
+++ b/lib/ain-rs-exports/Cargo.toml
@@ -14,7 +14,7 @@ ain-evm = { path = "../ain-evm" }
 ain-grpc = { path = "../ain-grpc" }
 ain-ocean = { path = "../ain-ocean" }
 ain-contracts = { path = "../ain-contracts" }
-ain-macros = { path = "../ain-macros" }
+ain-macros.workspace = true
 ain-cpp-imports = { path = "../ain-cpp-imports" }
 
 ethereum.workspace = true
