--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -20,7 +20,7 @@ serde.workspace = true
 serde_with.workspace = true
 thiserror.workspace = true
 hex.workspace = true
-dftx-rs.workspace = true
+ain-dftx.workspace = true
 bitcoin = { workspace = true, features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0"
