--- a/lib/ain-macros/Cargo.toml
+++ b/lib/ain-macros/Cargo.toml
@@ -9,6 +9,6 @@ proc-macro = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-syn.workspace = true
+syn = { workspace = true, default-features = false, features = ["proc-macro", "full", "derive"] }
 quote.workspace = true
 proc-macro2.workspace = true
