--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -35,8 +35,11 @@ bincode.workspace = true
 defichain-rpc.workspace = true
 jsonrpc-async = "2.0.2"
 serde_urlencoded = "0.7"
+env_logger.workspace = true
 rust_decimal = { version = "1.34", features = ["serde", "serde-float", "serde-with-str"] }
 rust_decimal_macros = "1.34"
+clap = { version = "4.5.0", features = ["derive"] }
+num_cpus.workspace = true
 
 [dev-dependencies]
 tempdir.workspace = true
