Update patch to use defich/rust-bitcoin

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -18,8 +18,8 @@ lto = true
 vsdb = { git = "https://github.com/defich/vsdb.git" }
 vsdbsled = { git = "https://github.com/defich/vsdbsled.git" }
 ethereum = { git = "https://github.com/defich/ethereum.git" }
-bitcoin = { git = "https://github.com/Jouzo/rust-bitcoin.git" }
-bitcoin-io = { git = "https://github.com/Jouzo/rust-bitcoin.git" }
+bitcoin = { git = "https://github.com/defich/rust-bitcoin.git" }
+bitcoin-io = { git = "https://github.com/defich/rust-bitcoin.git" }
 
 [workspace.dependencies]
 
