--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -18,6 +18,8 @@ lto = true
 vsdb = { git = "https://github.com/defich/vsdb.git" }
 vsdbsled = { git = "https://github.com/defich/vsdbsled.git" }
 ethereum = { git = "https://github.com/defich/ethereum.git" }
+evm = { git = "https://github.com/defich/evm.git" }
+evm-runtime = { git = "https://github.com/defich/evm.git" }
 
 [workspace.dependencies]
 
@@ -88,7 +90,7 @@ spin = "0.9.8"
 ### eth
 
 evm = { version = "0.39", default-features = false, features = ["with-serde", "tracing"] }
-evm-runtime = "0.39.0"
+evm-runtime = { version  = "0.39.0" }
 
 ethereum = { git = "https://github.com/defich/ethereum.git" }
 ethereum-types = "0.14"
