--- a/.github/workflows/tests-jellyfish.yml
+++ b/.github/workflows/tests-jellyfish.yml
@@ -17,6 +17,13 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        instance: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
+
+    env:
+      GH_INSTANCE_TOTAL: 10
 
     steps:
       - uses: actions/checkout@v4
@@ -44,3 +51,5 @@ jobs:
           npm ci
           npm run compile
           DEFICHAIN_DOCKER_IMAGE=test-build-container npm run ci:test -- --testTimeout=1800000
+        env:
+          GH_INSTANCE_INDEX: ${{ matrix.instance }}
