--- a/.github/workflows/tests-jellyfish.yml
+++ b/.github/workflows/tests-jellyfish.yml
@@ -50,6 +50,6 @@ jobs:
         run: |
           npm ci
           npm run compile
-          DEFICHAIN_DOCKER_IMAGE=test-build-container npm run ci:test -- --testTimeout=1800000
+          DEFICHAIN_DOCKER_IMAGE=test-build-container npm run ci:test -- --testTimeout=600000
         env:
           GH_INSTANCE_INDEX: ${{ matrix.instance }}
