Move RocksDB traits to dedicated package (#2853)
* Shared db package

* Set MACOSX_DEPLOYMENT_TARGET and RUST_DEFAULT_VERSION

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -63,6 +63,7 @@ sha3 = "0.10"
 
 num = { version = "0.4", default-features = false, features = ["alloc"] }
 num-traits = "0.2"
+num_cpus = "1.0"
 
 hex = "0.4"
 hex-literal = "0.4"
@@ -118,5 +119,7 @@ sp-io = "24.0"
 substrate-bn = "0.6"
 
 ### Local crates
+ain-cpp-imports = { path = "./ain-cpp-imports" }
+ain-db = { path = "./ain-db" }
 ain-macros = { path = "./ain-macros" }
 ain-dftx = { path = "./ain-dftx" }
