--- a/.github/workflows/tests-jellyfish.yml
+++ b/.github/workflows/tests-jellyfish.yml
@@ -11,12 +11,35 @@ concurrency:
   cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
 
 env:
-  BUILD_VERSION: latest # Computed
+  DOCKER_HUB_USER: defi
+  DOCKER_IMAGE: defi/defichain:jellyfish-ci-${GITHUB_SHA:0:10}
 
 jobs:
+  docker-build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Populate environment
+        run: ./make.sh ci-export-vars
+
+      - name: Build docker image
+        run: docker build -t ${{ env.DOCKER_IMAGE }} -f ./contrib/dockerfiles/x86_64-pc-linux-gnu.dockerfile .
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Push to Docker Hub
+        run: docker push ${{ env.DOCKER_IMAGE }}
+
   test:
     name: Test
     runs-on: ubuntu-latest
+    needs: [docker-build]
     strategy:
       fail-fast: false
       matrix:
@@ -39,17 +62,15 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Populate environment
-        run: cd defichain && GIT_VERSION=1 ./make.sh ci-export-vars
-
-      - name: Build and setup
-        run: "cd defichain && docker build -t test-build-container
-          -f ./contrib/dockerfiles/x86_64-pc-linux-gnu.dockerfile ."
+      - name: Docker pull
+        run: |
+          docker pull ${{ env.DOCKER_IMAGE }}
 
       - name: Run tests
         run: |
           npm ci
           npm run compile
-          DEFICHAIN_DOCKER_IMAGE=test-build-container npm run ci:test -- --testTimeout=600000
+          DEFICHAIN_DOCKER_IMAGE=${{ env.DOCKER_IMAGE }} npm run ci:test -- --testTimeout=600000
         env:
           GH_INSTANCE_INDEX: ${{ matrix.instance }}
+
