--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -107,8 +107,16 @@ jobs:
         username: ${{ env.DOCKER_HUB_USER }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-    - name: Push to Docker Hub
+    - name: Tag version to built image
       run: |
         set -e; ver=${{ env.BUILD_VERSION }}
         docker tag defichain-${{ env.TARGET }}:${ver} defi/defichain:${ver}
-        docker push defi/defichain:${ver}
+
+    - name: Tag latest to built image
+      if: env.BUILD_VERSION != 'latest'
+      run: |
+        set -e; ver=${{ env.BUILD_VERSION }}
+        docker tag defichain-${{ env.TARGET }}:${ver} defi/defichain:latest
+
+    - name: Push to Docker Hub
+      run: docker push defi/defichain --all-tags
