--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -110,7 +110,6 @@ jobs:
     - name: Push to Docker Hub
       run: |
         set -e; ver=${{ env.BUILD_VERSION }}
-        docker tag defichain-${{ env.TARGET }}:${ver} defi/defichain:${ver}
-        docker tag defichain-${{ env.TARGET }}:${ver} defi/defichain:latest
+        docker tag defichain-${{ env.TARGET }}:${ver} defi/defichain:${ver} defi/defichain:latest
         docker push defi/defichain:${ver}
         docker push defi/defichain:latest
