--- a/.github/workflows/tests-jellyfish.yml
+++ b/.github/workflows/tests-jellyfish.yml
@@ -11,35 +11,63 @@ concurrency:
   cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
 
 env:
-  DOCKER_HUB_USER: defi
-  DOCKER_IMAGE: defi/defichain:jellyfish-ci-${GITHUB_SHA:0:10}
+  BUILD_VERSION: latest
+  MAKE_DEBUG: 0
+  GIT_VERSION: 1
 
 jobs:
-  docker-build:
+  build:
     runs-on: ubuntu-latest
-
+    container: defi/ain-builder:latest
+    env:
+      CARGO_INCREMENTAL: 0
+      TARGET: x86_64-pc-linux-gnu
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+    - run: git config --global --add safe.directory '*'
 
-      - name: Populate environment
-        run: ./make.sh ci-export-vars
+    - name: Populate environment
+      run: ./make.sh ci-export-vars
 
-      - name: Build docker image
-        run: docker build -t ${{ env.DOCKER_IMAGE }} -f ./contrib/dockerfiles/x86_64-pc-linux-gnu.dockerfile .
+    - name: Setup dependencies
+      run: ./make.sh ci-setup-deps
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ env.DOCKER_HUB_USER }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    - name: Setup user dependencies
+      run: ./make.sh ci-setup-user-deps
 
-      - name: Push to Docker Hub
-        run: docker push ${{ env.DOCKER_IMAGE }}
+    - name: Restore cpp build cache
+      id: cpp-cache-restore
+      uses: actions/cache/restore@v3
+      with:
+        path: |
+          ./build/depends
+          ./build/src
+          ~/.ccache
+        key: cpp-${{ env.TARGET }}-${{ env.BUILD_TYPE }}
+
+    - name: Rust build cache
+      uses: Swatinem/rust-cache@v2
+      id: rust-cache-restore
+      with:
+        workspaces: lib -> ../build/lib/target
+        save-if: ${{ github.ref == 'refs/heads/master' }}
+        shared-key: ${{ env.TARGET }}
+
+    - name: Build binaries
+      run: ./make.sh build
+
+    - name: Upload binaries
+      uses: actions/upload-artifact@v3
+      with:
+        name: defi-bins
+        path: |
+          build/src/defid
+          build/src/defi-cli
 
   test:
     name: Test
     runs-on: ubuntu-latest
-    needs: [docker-build]
+    needs: [build]
     strategy:
       fail-fast: false
       matrix:
@@ -50,27 +78,35 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Populate environment
+        run: ./make.sh ci-export-vars
+
+      - name: Download binaries
+        uses: actions/download-artifact@v3
         with:
-          repository: JellyfishSDK/jellyfish
-          ref: 'main'
+          name: defi-bins
+
+      - name: Build defi image
+        run: rm .dockerignore && ./make.sh docker-build-from-binaries
 
       - uses: actions/checkout@v4
         with:
-          path: defichain
+          repository: JellyfishSDK/jellyfish
+          ref: 'main'
+          path: jellyfish
 
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      - name: Docker pull
-        run: |
-          docker pull ${{ env.DOCKER_IMAGE }}
-
       - name: Run tests
         run: |
+          cd jellyfish
           npm ci
           npm run compile
-          DEFICHAIN_DOCKER_IMAGE=${{ env.DOCKER_IMAGE }} npm run ci:test -- --testTimeout=600000
+          set -e; ver=${{ env.BUILD_VERSION }}
+          DEFICHAIN_DOCKER_IMAGE=defichain-${{ env.TARGET }}:${ver} npm run ci:test -- --testTimeout=600000
         env:
           GH_INSTANCE_INDEX: ${{ matrix.instance }}
 
