--- a/.github/workflows/tests-jellyfish.yml
+++ b/.github/workflows/tests-jellyfish.yml
@@ -60,9 +60,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: defi-bins
-        path: |
-          build/src/defid
-          build/src/defi-cli
+        path: build/src/defid
 
   test:
     name: Test
@@ -86,6 +84,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: defi-bins
+          path: ./build/
 
       - name: Build defi image
         run: rm .dockerignore && ./make.sh docker-build-from-binaries
