EVM: Storage versioning and migration (#2681)
* Index txs' block hash and index

* Index txs' block hash and index

* Handle BlockStore migration

* Add migration len check to prevent oversight

* Sort migrations by version

* Clippy fix

* Log each migration duration

* Process blocks in parallel

* With doc

* Check migrations len at compile time

--- a/lib/ain-evm/Cargo.toml
+++ b/lib/ain-evm/Cargo.toml
@@ -31,6 +31,7 @@ rustc-hex.workspace = true
 ethabi.workspace = true
 parking_lot.workspace = true
 spin.workspace = true
+rayon.workspace = true
 
 # Trie dependencies
 hash-db.workspace = true
