Support token split on EVM (#2850)
* Base for token split on EVM

* Token split via TransferDomain

* Handle EVM state changes through TokenSplit precompile

@jouzo cherry-picked commit

* Fix compilation error

* Use cache of global so as not to write changes

* Add minted tokens and update test

* Do not add minted to split token. Add multiple intrinsic test.

* Remove unused interface

* Remove WIP log line

* Refactor test. Test EVM token merge via intrinsics.

* Test EVM token merge via transfer domain

* Rename split to migrate/migration

* Move loan splits to fallible

* Add rollback test. Test -3 merge.

* Fix compilation after merge

* Remove unused variable

* Circular deps

* Remove redundant test as token rolled back on each test already

* Remove unused import

* Rust lint errors

* Fix clippy warning

* cargo fmt

* Specify OSX target

* Fix more clippy errors

* Remove redundant approval

* Make TokenSplit precompile only accessible through intrinsics

* Update public fn names

* Use migrateTokensOnAddress

* cleanup

* Update economy stats on split

* Fix errors after merge

---------

Co-authored-by: jouzo <jdesclercs@gmail.com>
Co-authored-by: Prasanna Loganathar <pvl@prasannavl.com>
Co-authored-by: Niven <sieniven@gmail.com>

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -18,6 +18,8 @@ lto = true
 vsdb = { git = "https://github.com/defich/vsdb.git" }
 vsdbsled = { git = "https://github.com/defich/vsdbsled.git" }
 ethereum = { git = "https://github.com/defich/ethereum.git" }
+evm = { git = "https://github.com/defich/evm.git" }
+evm-runtime = { git = "https://github.com/defich/evm.git" }
 bitcoin = { git = "https://github.com/defich/rust-bitcoin.git" }
 bitcoin-io = { git = "https://github.com/defich/rust-bitcoin.git" }
 
