fixed oracle and added testcase appoint

--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 [profile.test]
 debug = true
 
+[profile.dev]
+opt-level = 0
+debug = true
+
 [dependencies]
 ain-cpp-imports.workspace = true
 ain-db.workspace = true
