Ocean: poolpair graph (#2855)
* sync_token_graph on initialize

* poolpairs_path

* get_pool_pair_info_cached

* compute_paths_between_tokens + all_simple_paths

* get_pool_pair_info_cached

* add list_paths api

* fix list_paths api

* fix all_simple_paths

* missing Response list_paths api

* temp disable list_pool_pairs_cached + fix get_pool_pair_info_cached

* camelCase TokenIdentifier + Arc for token_graph & tokens_to_swappable_tokens data model

* fix SwapPathPoolPair rename id to pool_pair_id, enable price_ratio

* fix PriceRatio typing

* sync_token_graph: execute first then wait in loop

* estimated_dex_fees_in_pct

* grab fab7f5f defichain-rpc

* rm extra api

* get_best_path

* use rust_decimal

* rm unuse import

* fix estimated_dex_fees_in_pct

* default 1

* mmv list_paths above of get_best_path

* ceil

* format num

* fix typo

* ceil

* id default String

* proper err for`from_token_id != to_token_id`

* fix EstimatedDexFeesInPct typing

* rm unuse comment

* rm tokens_to_swappable_tokens & wip get_swappable_tokens api

* fix get_swappable_tokens

* get_swappable_tokens done

* br

* use format_err.into()

* fix unwrap

* rm println

* sync_token_graph_if_empty

* repl if let else by unwrap_or_default

* rm ceil.. its bug

* rm clone

* refine recur

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -123,7 +123,8 @@ substrate-bn = "0.6"
 #### Ocean dependencies
 bitcoin = "0.31"
 cached = { version = "0.48", features = ["async"] }
-defichain-rpc = { version = "0.18.0", git = "https://github.com/defich/rust-defichain-rpc.git" }
+# defichain-rpc = { version = "0.18.0", git = "https://github.com/defich/rust-defichain-rpc.git" }
+defichain-rpc = { rev = "fab7f5f", git = "https://github.com/defich/rust-defichain-rpc.git" }
 
 ### Local crates
 ain-cpp-imports = { path = "./ain-cpp-imports" }
